# 2026_ai_rookie_course4

./: README.md  pyproject.toml  report.html  slides.html
lab1/: lab1.py
lab2/: lab2.py
lab3/: docker-compose.yaml  lab3.py
lab4/: lab4.py
lab5/: eval_results.json  lab5.py
lab6/: lab6.py
lab6/workdir/: README_delivery.txt  inference.py
